@@ -4,7 +4,7 @@ mochad_SOURCES = mochad.c decode.c encode.c global.c x10state.c x10_write.c \
 EXTRA_DIST = udev/91-usb-x10-controllers.rules hotplug2/20-usb-x10 hotplug2/mochad \
 	     cgi/x10.pl cgi/netcat.pl cgi/getsensors.pl cgi/cgi-lib.pl \
 	     apps/mochamon.pl apps/simplemon.pl apps/bash.sh \
-	     apps/rfsectopl3.pl apps/x10-tk.py
+	     apps/rfsectopl3.pl apps/x10-tk.py apps/mochad.scr
 
 install-exec-hook:
 	if test -d /etc/udev/rules.d ; then \
